kubernetes/ali-virtual-service-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: '{APP_NAME}'
  namespace: default
  label:
    appname: '${APP_NAME}'
spec:
  gateways:
  - {GATEWAY}
  hosts:
  - {HOST}
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: {APP_NAME}.{NAMESPACE}.svc.cluster.local
        port:
          number: 3000
    rewrite:
      uri: /
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - PUT
      - DELETE
      allowCredentials: true
      allowHeaders:
      - DNT
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Range
      - Authorization
      - authorization
      maxAge: "24h"
